[package]
name = "arara"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
btleplug = "0.11.5"
clap = { version = "4.5.0", features = ["derive"] }
hex = "0.4.3"
scroll = "0.12.0"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros", "parking_lot"] }
tokio-stream = "0.1.14"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["time", "parking_lot"] }
